# mtm-ex4

./: Area.cpp  Area.h  AreasTest.cpp  CMakeLists.txt  Clan.cpp  Clan.h  Group.cpp  Group.h  Mountain.cpp  Mountain.h  MtmSet.h  Plain.cpp  Plain.h  README.md  River.cpp  River.h  World.cpp  World.h  examplePart2.cpp  examplePart3.cpp  part3.cpp  testsPart1.cpp  tmpClanTests.cpp  tmpWorldTests.cpp
test/: AreaTests.cpp  ClanTests.cpp  GroupTests.cpp  MtmSetTests.cpp  WorldTests.cpp  part1.cpp  part2.cpp  part3.cpp
